借助 Claude Code 完成项目问题排查与功能迭代使用 AI 辅助分析项目代码，发现并改进问题